--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -377,6 +377,7 @@ header {
         display: flex;
         align-items: center;
         & .form-group {
+            width: 100%;
             display: flex;
             justify-content: space-between;
 
