--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -428,16 +428,23 @@ header {
     padding: 10px;
     pointer-events: none;
     z-index: 1000;
+
     & .currencies {
         margin-top: 15px;
+
         & ul {
             padding: 0;
             margin: 0;
 
             & li {
                 font-size: 14px;
+
                 &::marker {
                     content: '';
+                }
+
+                &::-webkit-list-marker {
+                    display: none;
                 }
             }
         }
