hide marker to Safari

--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -433,6 +433,7 @@ header {
         margin-top: 15px;
 
         & ul {
+            list-style: none;
             padding: 0;
             margin: 0;
 
