--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -648,6 +648,7 @@ header {
             font-size: 16px;
             margin: 0;
             padding: 0;
+            color: var(--main_text_color);
 
             &::placeholder {
                 text-decoration: underline;
