--- a/templates/base.html
+++ b/templates/base.html
@@ -9,21 +9,15 @@
     <title>{% block title %}{% endblock %}</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <script src="{% static 'js/telegram.js' %}" defer></script>
-    <script src="{% static 'js/cookies.js' %}" defer></script>
-    <script src="{% static 'js/detect_sticky.js' %}" defer></script>
-    <script src="{% static 'js/init.js' %}" defer></script>
-    <script src="{% static 'js/tabs.js' %}" defer></script>
-    <script src="{% static 'js/currency.js' %}" defer></script>
-    <script src="{% static 'js/team.js' %}" defer></script>
+    {% block main_scripts %}
+    {% endblock %}
 
-    <script src="{% static 'js/charts.js' %}" defer></script>
-    <script src="{% static 'js/receipt_feed.js' %}" defer></script>
     {% block extra_head %}
     {% endblock %}
+
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
