--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-
+    <script src="{% static 'js/telegram.js' %}" defer></script>
     {% block main_scripts %}
     {% endblock %}
 
