fix showing receipt photo

--- a/section/templates/section/inc/main/feed/_receipts.html
+++ b/section/templates/section/inc/main/feed/_receipts.html
@@ -10,7 +10,7 @@
             </div>
 
             <div class="photo" x-show="feed.showPhotos && receipt?.photo">
-                <img :src="receipt.photo" alt="Фото чека" loading="lazy">
+                <img :src="receipt.photo" alt="Фото чека" loading="lazy" style="min-height: 5px;">
             </div>
 
             <div class="items">
