added translate to FAQ

--- a/section/templates/section/inc/faq/_faq.html
+++ b/section/templates/section/inc/faq/_faq.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="faq">
-    <div class="caption">FAQ</div>
+    <div class="caption">{% trans 'FAQ' %}</div>
 
     <div x-data="{
             activeAccordion: '',
