--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -1262,6 +1262,27 @@ input[type="checkbox"] {
         padding: 0 var(--default_block_padding);
     }
 }
+
+.faq {
+
+
+    .accordion {
+        & .caption {
+            margin-top: 20px;
+            padding: 0
+        }
+        & .group {
+            & span:nth-of-type(2) {
+                margin-left: 20px;
+            }
+            & button {
+                font-size: 15px;
+                font-weight: 200;
+                text-align: left;
+            }
+        }
+    }
+}
 .accordion {
     --border-radius: 10px;
     display: flex;
