--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -1269,7 +1269,8 @@ input[type="checkbox"] {
     .accordion {
         & .caption {
             margin-top: 20px;
-            padding: 0
+            padding: 0;
+            font-weight: bold;
         }
         & .group {
             & span:nth-of-type(2) {
