--- a/section/templates/section/inc/faq/_faq.html
+++ b/section/templates/section/inc/faq/_faq.html
@@ -12,34 +12,33 @@
          x-init="setTimeout(() => show = true, 400)" x-show="show" x-transition.duration.700ms
          class="accordion">
 
-        <div class="caption">Аккаунт и поддержка</div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как связаться с разработчиками?" faq_description="Через форму обратной связи в разделе «Аккаунт» → «Обратная связь»" %}
+        {% load i18n %}
 
-        <div class="caption">Работа с ботом</div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как начать работу с ботом?" faq_description="Просто отправьте фото чека в чат с ботом – он автоматически обработает изображение и вернёт статус" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как сменить язык в боте?" faq_description="В меню бота или в Веб-приложении, выберите раздел «Аккаунт» → «Язык» и укажите нужный" %}
+        <div class="caption">{% trans "Account and support" %}</div>
+        {% trans "How to contact the developers?" as caption %}{% trans "Via the feedback form in “Account” → “Feedback” section" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
 
-        <div class="caption">Веб-приложение </div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как выбрать период для аналитики?" faq_description="На главной странице webapp доступны три фиксированных диапазона: неделя, месяц и год. По умолчанию активен один из них. В ближайшем обновлении появится выбор произвольного периода через календарь" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Какие отчёты и графики есть сейчас?" faq_description="Общая сумма трат, круговая диаграмма" %}
+        <div class="caption">{% trans "Working with the bot" %}</div>
+        {% trans "How to get started with the bot?" as caption %}{% trans "Just send a photo of the receipt in the chat with the bot – it will automatically process the image and return the status" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "How to change the language in the bot?" as caption %}{% trans "In the bot menu or in the web application, select “Account” → “Language” and choose the desired one" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
 
-        <div class="caption">Комнаты</div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Что такое «комната»?" faq_description="Это общий чат-касса, где видно чеки всех участников и общие графики" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как создаётся комната?" faq_description="Первая комната автоматически создаётся при первом входе в бота. Новые комнаты пока создать нельзя, но вас могут пригласить в уже существующую" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как пригласить других в комнату?" faq_description="В меню раздела нажмите кнопку «Пригласить», откроется чат бота с кнопкой для выбора пользователей" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Кто может добавлять и удалять участников?" faq_description="Только владелец комнаты. Обычные участники могут удалить себя сами." %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как сменить комнату и установить её по умолчанию?" faq_description="Если у вас несколько комнат, появятся стрелки переключения. Кнопка «Установить по умолчанию» делает текущую комнату основной. Если вас удалили из чужой комнаты, по умолчанию восстановится ваша собственная" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Можно ли переименовать комнату или сменить валюту?" faq_description="Любой участник может задать своё локальное название комнаты и выбрать валюту отображения графиков. Валюта никак не влияет на других. Название же комнаты, заданное владельцем, будет отображаться всем тем участникам, у которых не задано собственное название комнаты." %}
+        <div class="caption">{% trans "Web application" %}</div>
+        {% trans "How to select a period for analytics?" as caption %}{% trans "On the main page of the webapp there are three fixed ranges available: week, month, and year. One of them is active by default. In the upcoming update there will be a choice of a custom period via the calendar" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "Which reports and charts are currently available?" as caption %}{% trans "Total spending amount, pie chart" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
 
-        <div class="caption">Финансы и графики</div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Какие валюты поддерживаются?" faq_description="Поддерживаются все мировые валюты. Все суммы конвертируются в валюту по умолчанию с помощью актуальных курсов" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Как увидеть детальную информацию по категории на диаграмме?" faq_description="Нажмите на сегмент — появится окошко с категорией, суммой в валюте комнаты и детализацией по исходным валютам" %}
+        <div class="caption">{% trans "Rooms" %}</div>
+        {% trans "What is a “room”?" as caption %}{% trans "It's a shared chat-cash register, where you can see receipts from all participants and overall charts" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "How is a room created?" as caption %}{% trans "The first room is automatically created upon first entering the bot. New rooms cannot be created yet, but you can be invited to an existing one" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "How to invite others to a room?" as caption %}{% trans "In the section menu, click the “Invite” button. A bot chat will open with a button to select users" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "Who can add and remove participants?" as caption %}{% trans "Only the room owner. Regular participants can remove themselves." as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "How to switch rooms and set one as default?" as caption %}{% trans "If you have multiple rooms, switching arrows will appear. The “Set as default” button makes the current room the primary one. If you are removed from someone else's room, your own room will become the default again." as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "Can you rename a room or change the currency?" as caption %}{% trans "Any participant can set their own local name for the room and choose the currency for display charts. The currency does not affect others. The room name set by the owner will be displayed to all participants who have not set their own room name." as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
 
-        <div class="caption">Чеки</div>
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Можно ли фильтровать чеки?" faq_description="Пока фильтрация только по периоду. В следующих обновлениях добавятся фильтры по людям и категориям" %}
-        {% include 'section/inc/faq/_faq_item.html' with faq_caption="Что можно отредактировать в чеке?" faq_description="Полноценное редактирование доступно любому участнику, а также удаление чека" %}
+        <div class="caption">{% trans "Finance and charts" %}</div>
+        {% trans "Which currencies are supported?" as caption %}{% trans "All world currencies are supported. All amounts are converted into the default currency using current exchange rates" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "How to see detailed information for a category on the chart?" as caption %}{% trans "Click on a segment – a window will appear with the category, amount in the room's currency, and a breakdown by original currencies" as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
 
-
-
+        <div class="caption">{% trans "Receipts" %}</div>
+        {% trans "Can receipts be filtered?" as caption %}{% trans "Currently filtering is only by period. In future updates, filters by people and categories will be added." as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
+        {% trans "What can be edited in a receipt?" as caption %}{% trans "Full editing is available to any participant, as well as receipt deletion." as description %}{% include 'section/inc/faq/_faq_item.html' with faq_caption=caption faq_description=description %}
     </div>
 </div>
