added subscription app with base funcs

--- a/section/templates/section/inc/tabs/_account.html
+++ b/section/templates/section/inc/tabs/_account.html
@@ -1,5 +1,6 @@
 <div x-show="$store.tabs.tab === 'account'" style="display: none;" class="tab">
     {% include 'section/inc/account/language.html' %}
+    {% include 'section/inc/account/plans.html' %}
     {% include 'section/inc/faq/_faq.html' %}
     {% include 'user/feedback_form.html' %}
 </div>
