--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="{% static 'js/telegram.js' %}" defer></script>
+    <script src="{% static 'js/plans.js' %}" defer></script>
     {% block main_scripts %}
     {% endblock %}
 
