--- a/section/templates/section/inc/account/plans.html
+++ b/section/templates/section/inc/account/plans.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <div x-data x-cloak>
 
   <template x-if="$store.plans.plans.length">
@@ -11,8 +12,8 @@
 
       <template x-if="$store.plans.currentSubscription">
         <div class="subscription-info">
-          <div>Start: <span x-text="$store.plans.currentSubscription.started_at"></span></div>
-          <div>End:   <span x-text="$store.plans.currentSubscription.expires_at ?? 'No expiration'"></span></div>
+          <div>{% trans "Start" %}: <span x-text="$store.plans.currentSubscription.started_at"></span></div>
+          <div>{% trans "End" %}:   <span x-text="$store.plans.currentSubscription.expires_at ?? '{% trans "No expiration" %}'"></span></div>
         </div>
       </template>
 
@@ -66,6 +67,11 @@
         </div>
       </div>
 
+        <template x-if="!$store.plans.currentSubscription && $store.plans.currentPlan.link">
+            <div class="order">
+                <button @click="window.Telegram.WebApp.openTelegramLink($store.plans.currentPlan.link);">{% trans "Subscribe" %}</button>
+            </div>
+        </template>
     </div>
   </template>
 
